[package]
name = "tokio-easy-timer"
version = "0.1.1"
authors = ["trdthg <trdthg@outlook.com>"]
edition = "2021"
description = "A tokio-based task scheduler, with a user-friendly API"
readme = "README.md"
homepage = "https://github.com/trdthg/tokio-easy-timer"
repository = "https://github.com/trdthg/tokio-easy-timer"
license = "MIT OR Apache-2.0"
keywords = ["timer", "tokio", "async", "scheduler", "corn"]
categories = ["asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
tokio = { version="1.5", features=["rt", "rt-multi-thread", "time", "macros"]}

cron = { path = "./cron" }
timer-cacher = { path = "./timer-cacher" }
timer-utils = { path = "./timer-utils" }

chrono = "0.4"
async-trait = "0.1"

dashmap = "5"

[dev-dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
dotenv = "0.15"
